# Jelly

./: .gitattributes  .gitignore  README.md
EngineCore/: CMakeLists.txt
EngineCore/Jelly/: CMakeLists.txt
EngineCore/Jelly/include/jelly/: error.hpp  exception.hpp  jelly.hpp  jelly_export.hpp
EngineCore/Jelly/include/jelly/core/: camera.hpp  camera_system.hpp  game_system_interface.hpp  game_time.hpp  graphic_api_type.hpp  hierarchy.hpp  logger.hpp  scene.hpp  scene_manager.hpp  transform.hpp  transform_system.hpp
EngineCore/Jelly/include/jelly/graphics/: graphic_api_factory.hpp  graphic_context.hpp  image.hpp  material.hpp  material_factory.hpp  mesh.hpp  mesh_factory.hpp  mesh_renderer_system.hpp  shader_factory.hpp  shader_interface.hpp  texture_factory.hpp  texture_interface.hpp
EngineCore/Jelly/include/jelly/graphics/vulkan/: queue_family_indices.hpp  vulkan_buffer_utils.hpp  vulkan_graphic_api.hpp  vulkan_material.hpp  vulkan_mesh.hpp  vulkan_shader.hpp  vulkan_shader_module.hpp  vulkan_texture.hpp
EngineCore/Jelly/include/jelly/windowing/: vulkan_native_window_handle_provider.hpp  window_system_factory.hpp
EngineCore/Jelly/include/jelly/windowing/glfw/: glfw_vulkan_window_system.hpp
EngineCore/Jelly/include/spirv-reflect/: spirv_reflect.h
EngineCore/Jelly/resources/assets/shaders/: test.frag  test.vert
EngineCore/Jelly/resources/assets/shaders/default/: default.frag.slang  default.vert.slang
EngineCore/Jelly/src/jelly/: jelly.cpp  main.cpp
EngineCore/Jelly/src/jelly/core/: camera_system.cpp  logger.cpp  scene.cpp  transform_system.cpp
EngineCore/Jelly/src/jelly/graphics/: image.cpp  material_factory.cpp  mesh.cpp  mesh_factory.cpp  mesh_renderer_system.cpp  shader_factory.cpp  texture_factory.cpp
EngineCore/Jelly/src/jelly/graphics/vulkan/: vulkan_buffer_utils.cpp  vulkan_graphic_api.cpp  vulkan_graphic_api_command_buffers.cpp  vulkan_graphic_api_command_pool.cpp  vulkan_graphic_api_depth_resources.cpp  vulkan_graphic_api_framebuffers.cpp  vulkan_graphic_api_helpers.cpp  vulkan_graphic_api_image_views.cpp  vulkan_graphic_api_instance.cpp  vulkan_graphic_api_logical_device.cpp  vulkan_graphic_api_render_pass.cpp  vulkan_graphic_api_surface.cpp  vulkan_graphic_api_swapchain.cpp  vulkan_graphic_api_sync_objects.cpp  vulkan_material.cpp  vulkan_mesh.cpp  vulkan_shader.cpp  vulkan_shader_module.cpp  vulkan_texture.cpp
EngineCore/Jelly/src/spirv-reflect/: spirv_reflect.c
EngineCore/Runtime/: CMakeLists.txt
EngineCore/Runtime/src/: main.cpp  project.json  rotate_mesh_system.hpp
Jelly/: CMakeLists.txt
Jelly/include/jelly/: jelly.hpp
Jelly/include/jelly/core/: game_system_interface.hpp  graphics_api_type.hpp  logger.hpp  managed_resource.hpp  scene.hpp  window_settings.hpp
Jelly/include/jelly/graphics/: graphic_api_interface.hpp  graphic_context.hpp  shader_interface.hpp
Jelly/include/jelly/graphics/vulkan/: swap_chain_support_details.hpp  vulkan_graphic_api.hpp  vulkan_shader_module.hpp
Jelly/include/jelly/windowing/: native_window_handle_provider_interface.hpp  window_graphic_api_binder.hpp  window_system_factory.hpp  window_system_interface.hpp
Jelly/include/jelly/windowing/glfw/: glfw_vulkan_window_system.hpp  glfw_window_system.hpp
Jelly/include/jelly_api/: jelly.h  jelly_api_export.h  jelly_handle.h  scene_manager.h
Jelly/src/jelly/: jelly.cpp
Jelly/src/jelly/core/: logger.cpp  scene_manager.cpp
Jelly/src/jelly/graphics/: graphic_context.cpp  shader_factory.cpp
Jelly/src/jelly/graphics/vulkan/: vulkan_graphic_api_framebuffers.cpp  vulkan_graphic_api_instance.cpp  vulkan_graphic_api_pick_physical_device.cpp  vulkan_graphic_api_render_pass.cpp  vulkan_shader_module.cpp
Jelly/src/jelly/windowing/glfw/: glfw_vulkan_window_system.cpp  glfw_window_system.cpp
Jelly/src/jelly_api/: jelly.cpp  scene_manager.cpp
JellyAssembly/: JellyAssembly.sln
JellyAssembly/JellyAssembly/: Jelly.cs  JellyHandle.cs  JellyInterop.cs  JellyNative.cs  JellySceneManager.cs  Utf8Helper.cs
JellyAssembly/JellyEngine/: JellyApplication.cs  JellyCore.cs  Scene.cs  SceneManager.cs
JellyAssembly/Player/: Player.csproj  Program.cs
JellySquish/: config.py  converter.py  main.py  meta.py  processor.py  scanner.py
